--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.6",
     "express": "^4.17.1",
+    "node-cache": "^5.1.2",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
