--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.6",
+    "ethers": "^5.5.1",
     "express": "^4.17.1",
     "node-cache": "^5.1.2",
     "ts-node": "^10.4.0",
